--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,3 +27,21 @@ jobs:
           paths:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
+  tests:
+    docker:
+      - image: circleci/python:3.6.1
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      - run:
+          name: test_nets
+          command: |
+            python3 -m unittest tests/test_nets
+
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ checksum "test_nets.py" }}
