--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,11 @@ jobs:
       - run:
           name: test_nets
           command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
             python3 -m unittest tests/test_nets.py
+            python3 -m unittest tests/test_attacks.py
 
       - save_cache:
           paths:
