--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,34 @@
-torch==1.0.1
-matplotlib
-numpy
-tabulate
-validators
-tqdm
-Pillow
+h5py==2.7.1
+httplib2==0.9.2
+idna==2.6
+incremental==17.5.0
+ipykernel==4.8.2
+Jinja2==2.10
+matplotlib==3.0.3
+numpy==1.16.2
+opencv-python==4.0.0.21
+pandas==0.22.0
+pandocfilters==1.4.2
+Pillow==5.1.0
+prompt-toolkit==1.0.15
+protobuf==3.7.1
+PyYAML==3.12
+pyzmq==16.0.2
+requests==2.18.4
+requests-unixsocket==0.1.5
+scikit-image==0.14.2
+scipy==0.19.1
+service-identity==18.1.0
+simplegeneric==0.8.1
+six==1.11.0
+tables==3.4.2
+tabulate==0.8.3
+torch==1.0.1.post2
+torchvision==0.2.2.post3
+tqdm==4.31.1
+traceback2==1.4.0
+traitlets==4.3.2
+Twisted==19.2.0
+unittest2==1.1.0
+urllib3==1.22
+validators==0.12.5
