--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ httplib2==0.9.2
 idna==2.6
 incremental==17.5.0
 ipykernel==4.8.2
-Jinja2==2.10
 matplotlib==3.0.3
 numpy==1.16.2
 opencv-python==4.0.0.21
@@ -13,8 +12,7 @@ Pillow==5.1.0
 prompt-toolkit==1.0.15
 protobuf==3.7.1
 PyYAML==3.12
-pyzmq==16.0.2
-requests==2.18.4
+requests>=2.20.0
 requests-unixsocket==0.1.5
 scikit-image==0.14.2
 scipy==0.19.1
@@ -30,5 +28,3 @@ traceback2==1.4.0
 traitlets==4.3.2
 Twisted==19.2.0
 unittest2==1.1.0
-urllib3==1.22
-validators==0.12.5
