--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
 
-  test:
+  test_nets:
     docker:
       - image: circleci/python:3.6.1
 
@@ -44,6 +44,27 @@ jobs:
             . venv/bin/activate
             pip install -r requirements.txt
             python3 -m unittest tests/test_nets.py
+
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ checksum "test_nets.py" }}
+
+  test_nets:
+    docker:
+      - image: circleci/python:3.6.1
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      - run:
+          name: test_nets
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
             python3 -m unittest tests/test_attacks.py
 
       - save_cache:
@@ -56,4 +77,5 @@ workflows:
   build_and_test:
     jobs:
       - build
-      - test
+      - test_nets
+      - test_attacks
