--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,6 +95,28 @@ jobs:
           key: v1-dependencies-{{ checksum "tests/test_one_calls.py" }}        
    
 
+  test_utils:
+    docker:
+      - image: circleci/python:3.6.1
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      - run:
+          name: test_utils
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+            python3 -m unittest tests/test_utils.py
+
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ checksum "tests/test_utils.py" }}        
+
 workflows:
   version: 2
   build_and_test:
@@ -103,3 +125,4 @@ workflows:
       - test_nets
       - test_attacks
       - test_one_calls
+      - test_utils
