--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,8 +92,30 @@ jobs:
       - save_cache:
           paths:
             - ./venv
-          key: v1-dependencies-{{ checksum "tests/test_one_calls.py" }}        
+          key: v1-dependencies-{{ checksum "tests/test_one_calls.py" }}
    
+
+  test_metrics:
+    docker:
+      - image: circleci/python:3.6.1
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      - run:
+          name: test_metrics
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+            python3 -m unittest tests/test_metrics.py
+
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ checksum "tests/test_metrics.py" }}
 
 workflows:
   version: 2
@@ -103,3 +125,4 @@ workflows:
       - test_nets
       - test_attacks
       - test_one_calls
+      - test_metrics
