--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,28 @@ jobs:
             - ./venv
           key: v1-dependencies-{{ checksum "tests/test_metrics.py" }}
 
+  test_learners:
+    docker:
+      - image: circleci/python:3.6.1
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      - run:
+          name: test_learners
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+            python3 -m unittest tests/test_learners.py
+
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ checksum "tests/test_learners.py" }}
+
 workflows:
   version: 2
   build_and_test:
@@ -126,3 +148,4 @@ workflows:
       - test_attacks
       - test_one_calls
       - test_metrics
+      - test_learners
