--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,6 +137,28 @@ jobs:
             - ./venv
           key: v1-dependencies-{{ checksum "tests/test_learners.py" }}
           
+  test_utils:
+    docker:
+      - image: circleci/python:3.6.1
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      - run:
+          name: test_utils
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+            python3 -m unittest tests/test_utils.py
+
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ checksum "tests/test_utils.py" }}
+
 workflows:
   version: 2
   build_and_test:
