--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ six==1.11.0
 tables==3.4.2
 tabulate==0.8.3
 torch==1.1.0
-torchvision==0.2.2.post3
+torchvision==0.3.0
 tqdm==4.32.1
 traceback2==1.4.0
 traitlets==4.3.2
